--- a/less/ku-datetimepicker.less
+++ b/less/ku-datetimepicker.less
@@ -33,7 +33,7 @@
     table {
       tr {
         th, td {
-          padding: 4px;
+          padding: 5px;
         }
       }
     }
@@ -97,6 +97,7 @@
     .day {
       &:hover {
         cursor: pointer;
+        font-weight: 700;
       }
     }
   }
