--- a/less/panels.less
+++ b/less/panels.less
@@ -271,7 +271,7 @@
   letter-spacing: 0.7px;
   color: @panel-default-header-text;
   min-height: 16px;
-  font-weight: 700;
+  font-weight: 600;
   padding: @panel-bokstop-heading-padding;
   border-bottom: 1px solid @ku-red;
 
@@ -304,8 +304,7 @@
   & > .panel-heading {
     overflow: hidden;
     font-weight: 600;
-    padding-left: 0;
-    padding-right: 0;
+    padding: 0;
     & > .panel-title {
       .boxtop;
     }
