--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -2203,7 +2203,7 @@
         top: 50%;
         left: 50%;
         transform: translateY(-50%) translateX(-50%);
-        // Prevent image from moving in some cases:
+        // Prevent image from moving in some cases
         backface-visibility: hidden;
         //filter: brightness(100%);
       }
