--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -3,9 +3,9 @@
 
 .nyhedsoverskrift {
   font-size: 1em;
-  line-height: @line-height-computed;
+  line-height: 18px;
   letter-spacing: 0.7px;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .media-list {
@@ -26,7 +26,7 @@
       .nyhedsoverskrift;
 
       a {
-        font-size: 1em;
+        font-size: inherit;
         color: inherit;
         display: block;
       }
@@ -68,7 +68,7 @@
   .media {
     .news-date2 {
       font-size: 12px;
-      font-weight: 400;
+      font-weight: 600;
       line-height: 15px;
       color: @gray-light;
     }
