--- a/less/panels.less
+++ b/less/panels.less
@@ -42,7 +42,7 @@
 .panel-title {
   margin-top: 0;
   margin-bottom: 0;
-  font-size: ceil((@font-size-base * 1.34));
+  font-size: 16px;
   font-weight: 600;
   letter-spacing: 0.25px;
   color: inherit;
