--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -2,7 +2,7 @@
 // Global menu news
 
 .nyhedsoverskrift {
-  font-size: 1em;
+  font-size: 14px;
   line-height: 18px;
   letter-spacing: 0.7px;
   font-weight: 600;
@@ -57,6 +57,7 @@
     .media {
       .nyhedsliste_dato {
         color: @gray-light;
+        font-weight: 600;
         .pull-right();
       }
     }
