--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -55,6 +55,12 @@
 #nyhedsliste {
   &.smal {
     .media {
+      .media-heading {
+        display: inline-block;
+        // Make room for the date:
+        max-width: 84%;
+      }
+
       .nyhedsliste_dato {
         color: @gray-light;
         font-weight: 600;
