fix styles to enforce sticky footer

--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -18,6 +18,12 @@ html:not(.non-responsive) {
 //}
 // Main content part
 
+#pageWrapper {
+  display: flex;
+  flex-flow: column nowrap;
+  min-height: 100%;
+}
+
 main {
   flex: 1 0 auto;
   background-color: @white-color;
