fix pagewrapper style

--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -18,7 +18,7 @@ html:not(.non-responsive) {
 //}
 // Main content part
 
-#pageWrapper {
+#pagewrapper {
   display: flex;
   flex-flow: column nowrap;
   min-height: 100%;
