--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -102,6 +102,9 @@
     </div>
   </div>
 </footer>
+<script>
+    var pageTitle = 'Titel';
+</script>
 <script src="https://bootstrap.secure.ku.dk/scripts/valid_search_engines_da.js"></script>
 {% if site.github %}
 <script src="{{ site.baseurl }}/dist/js/bootstrap.min.js"></script>
