--- a/docs/assets/css/frontpage/frontpage.css
+++ b/docs/assets/css/frontpage/frontpage.css
@@ -2,7 +2,9 @@
 
 
 /*Edge-to-edge grid for eg. slider*/
-
+..FullWidthFrontpage .main-content {
+  padding-top: 0;
+}
 @media screen and (max-width: 767px) {
   .FullWidthFrontpage .main-content .row:first-child .col-sm-12.col-md-9 {
     padding-right: 0;
