--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -34,29 +34,36 @@
     // Faculty colors for sublevel 1
     background: @ku-red;
     color: @white-color;
+    border-bottom: 1px solid darken(@ku-red, 10%);
 
     .theme-samf & {
       background: @samf;
+      border-bottom: 1px solid darken(@samf, 10%);
     }
 
     .theme-hum & {
       background: @hum;
+      border-bottom: 1px solid darken(@hum, 10%);
     }
 
     .theme-science & {
       background: @science;
+      border-bottom: 1px solid darken(@science, 10%);
     }
 
     .theme-sund & {
       background: @sund;
+      border-bottom: 1px solid darken(@sund, 10%);
     }
 
     .theme-jur & {
       background: @jura;
+      border-bottom: 1px solid darken(@jura, 10%);
     }
 
     .theme-teo & {
       background: @teol;
+      border-bottom: 1px solid darken(@teol, 10%);
     }
 
     .mm-next::after {
@@ -93,7 +100,37 @@
     background-color: @ku-red;
     color: @white-color;
     font-size: larger;
-    border-bottom: solid 1px lighten(@ku-red, 33%);
+    border-bottom: solid 1px lighten(@ku-red, 30%);
+
+    .theme-samf & {
+      background-color: @samf;
+      border-bottom: 1px solid lighten(@samf, 30%);
+    }
+
+    .theme-hum & {
+      background-color: @hum;
+      border-bottom: 1px solid lighten(@hum, 30%);
+    }
+
+    .theme-science & {
+      background-color: @science;
+      border-bottom: 1px solid lighten(@science, 30%);
+    }
+
+    .theme-sund & {
+      background-color: @sund;
+      border-bottom: 1px solid lighten(@sund, 30%);
+    }
+
+    .theme-jur & {
+      background-color: @jura;
+      border-bottom: 1px solid lighten(@jura, 30%);
+    }
+
+    .theme-teo & {
+      background-color: @teol;
+      border-bottom: 1px solid lighten(@teol, 30%);
+    }
   }
 
   .mm-navbars-top {
@@ -113,6 +150,6 @@
 
   .mm-menu .mm-navbar > *,
   .mm-menu .mm-navbar a {
-    color: fade(@text-color,1);
+    color: inherit;
   }
 }
