--- a/less/variables.less
+++ b/less/variables.less
@@ -8,7 +8,7 @@
 //## Gray and brand colors for use across Bootstrap.
 
 @gray-base:              #000;
-@gray-darker:            lighten(@gray-base, 13.5%); // #222
+@gray-darker:            #222;
 @gray-dark:              #252525;
 @gray:                   #ccc;
 @gray-light:             #777;
