--- a/less/panels.less
+++ b/less/panels.less
@@ -12,7 +12,7 @@
 // Panel contents
 
 .panel-body {
-  padding: 0 @panel-body-padding @panel-body-padding;
+  padding: @panel-body-padding;
   &:extend(.clearfix all);
 }
 // Optional heading
@@ -274,6 +274,7 @@
   }
 
   & > .panel-body {
+    padding: 0;
     border-top: 1px solid @ku-red;
 
     .theme-samf & {
@@ -298,6 +299,12 @@
 
     .theme-teo & {
       border-top: 1px solid @teol;
+    }
+    // KU specific:
+    & > p {
+      &:first-child {
+        padding:  12px @panel-body-padding @panel-body-padding;
+      }
     }
   }
 }
