--- a/less/panels.less
+++ b/less/panels.less
@@ -14,6 +14,8 @@
 .panel-body {
   padding: @panel-body-padding;
   &:extend(.clearfix all);
+  // KU specific:
+  overflow: hidden;
 }
 // Optional heading
 .panel-heading {
@@ -303,7 +305,7 @@
     // KU specific:
     & > p {
       &:first-child {
-        padding:  12px @panel-body-padding @panel-body-padding;
+        padding:  12px 0 0;
       }
     }
   }
