--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -21,9 +21,9 @@ html {
   font-size: 10px;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   height: 100%;
-  @media (max-width: @screen-sm-min) {
-    overflow-x: hidden;
-  }
+  // @media (max-width: @screen-sm-min) {
+  //   overflow-x: hidden;
+  // }
 
   &.non-responsive {
     overflow: auto;
