--- a/less/mixins/grid.less
+++ b/less/mixins/grid.less
@@ -12,8 +12,8 @@
   //     padding-left:  10px;
   //     padding-right: 10px;
   // }
-  padding-left:  floor((@gutter / 2));
-  padding-right: ceil((@gutter / 2));
+  padding-left: @grid-gutter-width;
+  padding-right: @grid-gutter-width;
   &:extend(.clearfix all);
 }
 
