--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -1,13 +1,6 @@
 // KU Nyheder & arrangementer
 // Global menu news
 
-.nyhedsoverskrift {
-  font-size: 14px;
-  line-height: 18px;
-  letter-spacing: 0.7px;
-  font-weight: 600;
-}
-
 .media-list {
   .media-left,
   .media-right {
@@ -23,7 +16,7 @@
     border-bottom: 1px solid @gray;
 
     .media-heading {
-      .nyhedsoverskrift;
+      .nyhedsoverskrift();
 
       a {
         font-size: inherit;
