--- a/less/mixins.less
+++ b/less/mixins.less
@@ -43,3 +43,4 @@
 @import "mixins/ku-background-color-with-fallback.less";
 @import "mixins/ku-aligning.less";
 @import "mixins/ku-links.less";
+@import "mixins/ku-content-elements.less";
