--- a/less/panels.less
+++ b/less/panels.less
@@ -255,14 +255,6 @@
 // Contextual variations
 // KU bokstope
 
-.boxtop {
-  line-height: 1.34;
-  letter-spacing: 0.7px;
-  color: @panel-default-header-text;
-  min-height: 16px;
-  font-weight: 600;
-  padding: @panel-bokstop-heading-padding;
-}
 
 .panel-default {
   & > .panel-heading {
@@ -271,7 +263,7 @@
     padding: 0;
 
     & > .panel-title {
-      .boxtop;
+      .boxtop();
     }
   }
 
