--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -76,6 +76,12 @@
     }
   }
 }
+
+.nyhedsboks {
+  .panel-body {
+    padding-top: 10px;
+  }
+}
 // Arrangementer - midterkolonne:
 
 #calendarlist {
@@ -88,5 +94,13 @@
 #minicalendar {
   .panel-body {
     padding: 6px 0 0;
+    border-top: 0;
+  }
+}
+
+.calendarbox {
+  .panel-body {
+    border-top: 0;
+    padding-top: 10px;
   }
 }
