--- a/less/panels.less
+++ b/less/panels.less
@@ -295,11 +295,11 @@
       border-top: 1px solid @teol;
     }
     // KU specific:
-    & > p {
-      &:first-child {
-        padding:  11px 0 0;
-      }
-    }
+    // & > p {
+    //   &:first-child {
+    //     padding:  11px 0 0;
+    //   }
+    // }
   }
 }
 
