--- a/less/pagination.less
+++ b/less/pagination.less
@@ -4,7 +4,7 @@
 .pagination {
   display: inline-block;
   padding-left: 0;
-  margin: @line-height-computed 0;
+  margin: 10px 0 @line-height-computed;
   border-radius: @border-radius-base;
 
   > li {
