--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -103,3 +103,13 @@
     padding-top: 10px;
   }
 }
+
+.calendarbox {
+  .panel-body {
+    padding-top: 10px;
+    border-top: 0;
+  }
+}
+.eventdate {
+  margin-top: 0;
+}
