--- a/less/breadcrumbs.less
+++ b/less/breadcrumbs.less
@@ -3,11 +3,11 @@
 // --------------------------------------------------
 
 .breadcrumb {
-  padding: @breadcrumb-padding-vertical @breadcrumb-padding-horizontal;
+  padding: 0 @breadcrumb-padding-horizontal @breadcrumb-padding-horizontal 0;
   margin-bottom: @margin0;
   list-style: none;
   background-color: @breadcrumb-bg;
-  font-size: 0.9em; // KU
+  font-size: 0.8em; // KU
   //border-radius: @border-radius-base;
   > li {
     display: inline-block;
