--- a/less/panels.less
+++ b/less/panels.less
@@ -18,6 +18,7 @@
   overflow: hidden;
 }
 // Optional heading
+
 .panel-heading {
   padding: @panel-heading-padding;
   border-bottom: 1px solid transparent;
@@ -36,11 +37,11 @@
   letter-spacing: 0.25px;
   color: inherit;
 
-   > .small > a,
+   > .small,
    > a,
    > small,
    > small > a,
-  > .small {
+  > .small > a {
     color: inherit;
   }
 }
@@ -58,8 +59,8 @@
 // any kind of custom content between the two.
 
 .panel {
-   > .list-group,
-  > .panel-collapse > .list-group {
+   > .panel-collapse > .list-group,
+  > .list-group {
     margin-bottom: 0;
 
     .list-group-item {
@@ -105,9 +106,9 @@
 // watch it go full width.
 
 .panel {
-   > .table,
+   > .panel-collapse > .table,
    > .table-responsive > .table,
-  > .panel-collapse > .table {
+  > .table {
     margin-bottom: 0;
 
     caption {
@@ -159,53 +160,53 @@
   //     }
   //   }
   // }
-   > .panel-body + .table,
+   > .panel-body + .table-responsive,
    > .table + .panel-body,
    > .table-responsive + .panel-body,
-  > .panel-body + .table-responsive {
+  > .panel-body + .table {
     border-top: 1px solid @table-border-color;
   }
 
-   > .table > tbody:first-child > tr:first-child th,
-  > .table > tbody:first-child > tr:first-child td {
+   > .table > tbody:first-child > tr:first-child td,
+  > .table > tbody:first-child > tr:first-child th {
     border-top: 0;
   }
 
-   > .table-bordered,
-  > .table-responsive > .table-bordered {
+   > .table-responsive > .table-bordered,
+  > .table-bordered {
     border: 0;
 
-     > tfoot,
+     > tbody,
      > thead,
-    > tbody {
+    > tfoot {
       > tr {
-         > th:first-child,
-        > td:first-child {
+         > td:first-child,
+        > th:first-child {
           border-left: 0;
         }
 
-         > th:last-child,
-        > td:last-child {
+         > td:last-child,
+        > th:last-child {
           border-right: 0;
         }
       }
     }
 
-     > thead,
-    > tbody {
+     > tbody,
+    > thead {
       > tr:first-child {
-         > td,
-        > th {
+         > th,
+        > td {
           border-bottom: 0;
         }
       }
     }
 
-     > tbody,
-    > tfoot {
+     > tfoot,
+    > tbody {
       > tr:last-child {
-         > td,
-        > th {
+         > th,
+        > td {
           border-bottom: 0;
         }
       }
@@ -228,15 +229,14 @@
   .panel {
     margin-bottom: 0;
     border-radius: @panel-border-radius;
-
-    + .panel {
-      margin-top: 5px;
-    }
+    // + .panel {
+    //   margin-top: 5px;
+    // }
   }
 
   .panel-heading {
-    border-top: 1px solid #f1f1f1;
-    border-bottom: 1px solid #d5d5d5;
+    border-top: 1px solid @semi-white;
+    border-bottom: 1px solid @panel-default-border;
 
     + .panel-collapse > .list-group,
     + .panel-collapse > .panel-body {
@@ -254,7 +254,6 @@
 }
 // Contextual variations
 // KU bokstope
-
 
 .panel-default {
   & > .panel-heading {
@@ -294,12 +293,6 @@
     .theme-teo & {
       border-top: 1px solid @teol;
     }
-    // KU specific:
-    // & > p {
-    //   &:first-child {
-    //     padding:  11px 0 0;
-    //   }
-    // }
   }
 }
 
@@ -325,41 +318,45 @@
 
 .panel-accordion {
   border: 1px solid @panel-accordion-border;
-  border-radius: @panel-accordion-border-radius!important;
 
   & > .panel-heading {
     background-color: @panel-accordion-heading-bg;
-    #gradient > .vertical(#f8f8f8; @panel-accordion-heading-bg);
-    .reset-filter(); // Disable gradients for IE9 because filter bleeds through rounded corners;
-    padding: 5px 10px 5px 20px;
+    padding: 10px 25px 15px 10px;
     position: relative;
     border-radius: inherit;
     border: 0;
 
     &:before {
       .glyphicon;
-      font-size: 9px;
+      font-size: 12px;
       color: @gray-light;
       position: absolute;
       display: block;
       top: 50%;
-      left: 7px;
+      right: 7px;
       transform: translateY(-50%);
       width: 20px;
     }
-    .glyphicon-triangle-right;
+    .glyphicon-plus;
     // Open accordion
     &.open {
-      .glyphicon-triangle-bottom;
+      background-color: @white-color;
+      .glyphicon-minus;
 
-      &:before {
-        color: @panel-accordion-arrow-active;
+      + .panel-collapse {
+        border-top: 0;
+
+        .panel-body {
+          padding-top: 0;
+          padding-bottom: 15px;
+          border-top: 0;
+        }
       }
     }
 
     .panel-title {
       font-size: @font-size-large;
-      font-weight: 600;
+      font-weight: 400;
 
       a {
         display: block;
@@ -372,6 +369,10 @@
   }
 
   .panel-collapse {
-    border-top: 1px solid #f1f1f1;
+    border-top: 1px solid @semi-white;
+  }
+
+  + .panel-accordion {
+    margin-top: -1px;
   }
 }
