--- a/less/ku-datetimepicker.less
+++ b/less/ku-datetimepicker.less
@@ -211,6 +211,7 @@
           display: block;
           &:hover {
             text-decoration: none;
+            font-weight: 600;
           }
         }
       }
@@ -357,6 +358,7 @@
     display: block;
     width: 28px;
     height: 28px;
+    margin: 0 auto;
 
     a {
       color: @text-color;
