--- a/less/variables.less
+++ b/less/variables.less
@@ -13,8 +13,11 @@
 @gray:                   #ccc;
 @gray-light:             #777;
 @gray-666:               #666;
+@grey-999:               #999;
+@grey-ddd:               #ddd;
 @gray-lighter:           #eee;
 
+@semi-white:            #f1f1f1;
 @white-color:            #fff;
 
 @ku-search-icons:        #9d9d9d;
@@ -28,7 +31,7 @@
 @ku-red-hover:          #7b161a;
 @ku-jumpboard:          #921819;
 @ku-jumpboard-links:    #606060;
-@ku-jumpboard-list-bg:  #f1f1f1;
+@ku-jumpboard-list-bg:  @semi-white;
 @hum:                   #365aa5;
 @hum-hover:             #304f91;
 @science:               #46743c;
@@ -187,7 +190,7 @@
 @table-bg-active:               @table-bg-hover;
 
 //** Border color for table and cell borders.
-@table-border-color:            #ddd;
+@table-border-color:            @grey-ddd;
 
 // KU specific
 @tr-highlight-bg: #e0e0e0;
@@ -445,9 +448,9 @@
 @navbar-default-brand-hover-bg:            transparent;
 
 // Navbar toggle
-@navbar-default-toggle-hover-bg:           #ddd;
+@navbar-default-toggle-hover-bg:           @grey-ddd;
 @navbar-default-toggle-icon-bar-bg:        #888;
-@navbar-default-toggle-border-color:       #ddd;
+@navbar-default-toggle-border-color:       @grey-ddd;
 
 
 //=== Inverted navbar
@@ -467,7 +470,7 @@
 
 // Inverted navbar brand label
 @navbar-inverse-brand-color:                @navbar-inverse-link-color;
-@navbar-inverse-brand-hover-color:          #fff;
+@navbar-inverse-brand-hover-color:          @white-color;
 @navbar-inverse-brand-hover-bg:             transparent;
 
 // Inverted navbar toggle
@@ -488,13 +491,13 @@
 @nav-disabled-link-hover-color:             @gray-light;
 
 //== Tabs
-@nav-tabs-border-color:                     #ddd;
+@nav-tabs-border-color:                     @grey-ddd;
 
 @nav-tabs-link-hover-border-color:          @gray-lighter;
 
 @nav-tabs-active-link-hover-bg:             @body-bg;
 @nav-tabs-active-link-hover-color:          @gray-light;
-@nav-tabs-active-link-hover-border-color:   #ddd;
+@nav-tabs-active-link-hover-border-color:   @grey-ddd;
 
 @nav-tabs-justified-link-border-color:            #ddd;
 @nav-tabs-justified-active-link-border-color:     @body-bg;
@@ -521,21 +524,21 @@
 //
 //##
 
-@pagination-color:                     @link-color;
-@pagination-bg:                        #fff;
-@pagination-border:                    #ddd;
+@pagination-color:                     #666;
+@pagination-bg:                        @white-color;
+@pagination-border:                    @grey-ddd;
 
-@pagination-hover-color:               @link-hover-color;
+@pagination-hover-color:               #666;
 @pagination-hover-bg:                  @gray-lighter;
-@pagination-hover-border:              #ddd;
+@pagination-hover-border:              @grey-ddd;
 
-@pagination-active-color:              #fff;
-@pagination-active-bg:                 @brand-primary;
-@pagination-active-border:             @brand-primary;
+@pagination-active-color:              @white-color;
+@pagination-active-bg:                 @grey-999;
+@pagination-active-border:             @grey-999;
 
 @pagination-disabled-color:            @gray-light;
 @pagination-disabled-bg:               #fff;
-@pagination-disabled-border:           #ddd;
+@pagination-disabled-border:           @grey-ddd;
 
 
 //== Pager
@@ -815,10 +818,8 @@
 
 // KU accordions
 @panel-accordion-text:           @text-color;
-@panel-accordion-border:         #b4b4b4;
-@panel-accordion-heading-bg:     #ededed;
-@panel-accordion-border-radius:  @border-radius-small;
-@panel-accordion-arrow-active:   #4c4c4c;
+@panel-accordion-border:         #ddd;
+@panel-accordion-heading-bg:     #f5f5f5;
 
 
 //== Thumbnails
