--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -57,7 +57,7 @@
 @import "responsive-utilities.less";
 
 // KU specific
-@import "ku-visited-links.less";
+//@import "ku-visited-links.less";
 @import "ku-branding.less";
 @import "ku-leftmenu.less";
 @import "ku-mobile-menu.less";
