--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -45,6 +45,9 @@
   &.pull-right {
       margin-left: 5px;
   }
+  img {
+    .img-responsive();
+  }
 }
 
 .figure-img {
@@ -55,4 +58,6 @@
 .figure-caption {
   font-size: @figure-caption-font-size;
   color: @gray-light;
+  border-bottom: 1px solid @figure-caption-border-color;
+  padding-bottom: 10px;
 }
