--- a/less/variables.less
+++ b/less/variables.less
@@ -831,7 +831,7 @@
 //** Thumbnail background color
 @thumbnail-bg:                @body-bg;
 //** Thumbnail border color
-@thumbnail-border:            #929292;
+@thumbnail-border:            @grey-ddd;
 //** Thumbnail border radius
 @thumbnail-border-radius:     @border-radius-base;
 
@@ -840,6 +840,7 @@
 //** Padding around the thumbnail caption
 @thumbnail-caption-padding:   9px;
 @figure-caption-font-size:   .9em;
+@figure-caption-border-color: #dfdfdf;
 
 
 //== Wells
@@ -939,6 +940,8 @@
 @abbr-border-color:           @gray-light;
 //** Headings small color
 @headings-small-color:        @gray-light;
+//** Blockquote icon color
+@blockquote-icon-color:       #818181;
 //** Blockquote small color
 @blockquote-small-color:      @gray-light;
 //** Blockquote font size
