--- a/less/ku-datetimepicker.less
+++ b/less/ku-datetimepicker.less
@@ -386,13 +386,12 @@
   }
 
   .datepicker-switch {
-    width: 145px;
+    width: 70%;
+    padding-bottom: 7px;
   }
 
-  .datepicker-switch,
   .next,
-  .prev,
-  tfoot tr th {
+  .prev {
     cursor: pointer;
   }
 
