--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -201,10 +201,10 @@ nav {
   position: fixed;
   bottom: 4%;
   right: 2%;
-  width: 42px;
-  height: 42px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
-  background: #d75959;
+  background: @ku-red;
   color: @white-color;
   z-index: 1030;
   overflow: hidden;
@@ -212,16 +212,16 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  .icon;
 
   .icon-arrow {
+    .icon;
     display: block;
     width: 100%;
     text-align: center;
 
     &:before {
       display: inline-block;
-      font-size: 20px;
+      font-size: 18px;
       transform: rotate(-90deg);
     }
   }
