--- a/less/faculties/hum.less
+++ b/less/faculties/hum.less
@@ -1,3 +1,11 @@
+// Core variables and mixins
+@import "../variables.less";
+@import "../mixins.less";
+
 //
 // Hum styles
 // --------------------------------------------------
+
+.scrolltop {
+  background: @hum;
+}
