--- a/less/faculties/samf.less
+++ b/less/faculties/samf.less
@@ -1,3 +1,11 @@
+// Core variables and mixins
+@import "../variables.less";
+@import "../mixins.less";
+
 //
 // Samf styles
 // --------------------------------------------------
+
+.scrolltop {
+  background: @samf;
+}
