--- a/less/faculties/science.less
+++ b/less/faculties/science.less
@@ -1,3 +1,11 @@
+// Core variables and mixins
+@import "../variables.less";
+@import "../mixins.less";
+
 //
 // Science styles
 // --------------------------------------------------
+
+.scrolltop {
+  background: @science;
+}
