--- a/less/faculties/sund.less
+++ b/less/faculties/sund.less
@@ -1,3 +1,11 @@
+// Core variables and mixins
+@import "../variables.less";
+@import "../mixins.less";
+
 //
 // Sund styles
 // --------------------------------------------------
+
+.scrolltop {
+  background: @sund;
+}
