--- a/less/faculties/teo.less
+++ b/less/faculties/teo.less
@@ -1,3 +1,11 @@
+// Core variables and mixins
+@import "../variables.less";
+@import "../mixins.less";
+
 //
 // Teo styles
 // --------------------------------------------------
+
+.scrolltop {
+  background: @teol;
+}
