--- a/less/variables.less
+++ b/less/variables.less
@@ -203,12 +203,12 @@
 @btn-font-weight:                normal;
 
 @btn-default-color:              @gray-dark;
-@btn-default-bg:                 #fff;
-@btn-default-border:             #d4d4d4;
+@btn-default-bg:                 @white-color;
+@btn-default-border:             #b6b6b6;
 
-@btn-primary-color:              #fff;
-@btn-primary-bg:                 @brand-primary;
-@btn-primary-border:             darken(@btn-primary-bg, 5%);
+@btn-primary-color:              @gray-dark;
+@btn-primary-bg:                 @white-color;
+@btn-primary-border:             #b6b6b6;
 
 @btn-success-color:              #fff;
 @btn-success-bg:                 @brand-success;
