--- a/less/mixins/buttons.less
+++ b/less/mixins/buttons.less
@@ -21,7 +21,7 @@
   }
   &:active,
   &.active,
-  .open > .dropdown-toggle& {
+  .open > .dropdown-toggle {
     color: @color;
     background-color: darken(@background, 10%);
         border-color: darken(@border, 12%);
