--- a/docs/_includes/css/type.html
+++ b/docs/_includes/css/type.html
@@ -91,14 +91,14 @@
 {% endhighlight %}
 
   <!-- Body copy .lead -->
-  <h3>Lead body copy</h3>
+  <!-- <h3>Lead body copy</h3>
   <p>Make a paragraph stand out by adding <code>.lead</code>.</p>
   <div class="bs-example" data-example-id="lead-copy">
     <p class="lead">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus.</p>
   </div>
 {% highlight html %}
 <p class="lead">...</p>
-{% endhighlight %}
+{% endhighlight %} -->
 
   <!-- Using Less -->
   <h3>Built with Less</h3>
