--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -215,12 +215,14 @@ nav {
 
   .icon-arrow {
     .icon;
-    display: block;
+    display: inherit;
     width: 100%;
+    padding-left: 1px;
     text-align: center;
 
     &:before {
-      display: inline-block;
+      display: block;
+      margin: 0 auto;
       font-size: 18px;
       transform: rotate(-90deg);
     }
