--- a/less/navbar.less
+++ b/less/navbar.less
@@ -772,7 +772,7 @@
 
         > a {
           color: @navbar-inverse-link-color;
-          padding: @padding-xs-horizontal 6px @padding-xs-horizontal 7px;
+          //padding: @padding-xs-horizontal 6px @padding-xs-horizontal 7px;
         }
       }
     }
