--- a/less/navs.less
+++ b/less/navs.less
@@ -3,18 +3,22 @@
 // --------------------------------------------------
 // Base class
 // --------------------------------------------------
+
 .nav {
   margin-bottom: 0;
   padding-left: 0; // Override default ul/ol
   list-style: none;
   &:extend(.clearfix all);
+
   > li {
     position: relative;
     display: block;
+
     > a {
       position: relative;
       display: block;
       padding: @nav-link-padding;
+
       &:focus,
       &:hover {
         text-decoration: none;
@@ -24,11 +28,12 @@
     // Disabled state sets text to gray and nukes hover/tab effects
     &.disabled > a {
       color: @nav-disabled-link-color;
+
       &:focus,
       &:hover {
         color: @nav-disabled-link-hover-color;
         text-decoration: none;
-        background-color: transparent;
+        //background-color: transparent;
         cursor: @cursor-disabled;
       }
     }
@@ -60,7 +65,8 @@
 //KU menu item pipes
 @media (min-width: @screen-sm-min) {
   .ku-nav {
-      display: block;
+    display: block;
+
     ul.nav {
       > li {
         + li {
@@ -75,6 +81,7 @@
             background: #cfcfcf;
           }
         }
+
         &:first-child {
           > a {
             padding-left: 0;
@@ -93,20 +100,21 @@
 // Tabs
 // -------------------------
 // Give the tabs something to sit on
+
 .nav-tabs {
-  border-bottom: 1px solid @nav-tabs-border-color;
+  // border-bottom: 1px solid @nav-tabs-border-color;
   > li {
     float: left;
     // Make the list-items overlay the bottom border
     margin-bottom: -1px;
     // Actual tabs (as links)
     > a {
-      margin-right: 2px;
-      line-height: @line-height-base;
-      border: 1px solid transparent;
-      border-radius: @border-radius-base @border-radius-base 0 0;
+      color: @text-color;
+      background-color: @nav-tabs-bg-color;
+      border-radius: @nav-link-border-radius;
+
       &:hover {
-        border-color: @nav-tabs-link-hover-border-color @nav-tabs-link-hover-border-color @nav-tabs-border-color;
+        background-color: @ku-nav-tabs-and-pills-hover-bg-color
       }
     }
     // Active state, and its :hover to override normal :hover
@@ -116,10 +124,12 @@
       &:hover {
         color: @nav-tabs-active-link-hover-color;
         background-color: @nav-tabs-active-link-hover-bg;
-        border: 1px solid @nav-tabs-active-link-hover-border-color;
-        border-bottom-color: transparent;
         cursor: default;
       }
+    }
+
+    + li {
+      margin-left: 2px;
     }
   }
   // pulling this in mainly for less shorthand
@@ -130,13 +140,21 @@
 }
 // Pills
 // -------------------------
+
 .nav-pills {
   > li {
     float: left;
     // Links rendered as pills
     > a {
+      color: @text-color;
+      background-color: @nav-pills-bg-color;
       border-radius: @nav-pills-border-radius;
+
+      &:hover {
+        background-color: @ku-nav-tabs-and-pills-hover-bg-color
+      }
     }
+
     + li {
       margin-left: 2px;
     }
@@ -152,9 +170,11 @@
   }
 }
 // Stacked pills
+
 .nav-stacked {
   > li {
     float: none;
+
     + li {
       margin-top: 2px;
       margin-left: 0; // no need for this gap between nav items
@@ -165,15 +185,20 @@
 // --------------------------------------------------
 // Justified nav links
 // -------------------------
+
 .nav-justified {
   width: 100%;
+
   > li {
     float: none;
+
     > a {
+      border-radius: 0;
       text-align: center;
       margin-bottom: 5px;
     }
   }
+
   > .dropdown .dropdown-menu {
     top: auto;
     left: auto;
@@ -182,8 +207,13 @@
     > li {
       display: table-cell;
       width: 1%;
+
       > a {
         margin-bottom: 0;
+      }
+
+      + li {
+        border-left: 2px solid @white-color;
       }
     }
   }
@@ -191,37 +221,41 @@
 // Move borders to anchors instead of bottom of list
 //
 // Mixin for adding on top the shared `.nav-justified` styles for our tabs
+
 .nav-tabs-justified {
   border-bottom: 0;
+
   > li > a {
     // Override margin from .nav-tabs
     margin-right: 0;
-    border-radius: @border-radius-base;
+    //border-radius: @border-radius-base;
   }
-   > .active > a:focus,
-   > .active > a:hover,
-  > .active > a {
-    border: 1px solid @nav-tabs-justified-link-border-color;
-  }
-  @media (min-width: @screen-sm-min) {
-    > li > a {
-      border-bottom: 1px solid @nav-tabs-justified-link-border-color;
-      border-radius: @border-radius-base @border-radius-base 0 0;
-    }
-     > .active > a:focus,
-     > .active > a:hover,
-    > .active > a {
-      border-bottom-color: @nav-tabs-justified-active-link-border-color;
-    }
-  }
+  //  > .active > a:focus,
+  //  > .active > a:hover,
+  // > .active > a {
+  //   border: 1px solid @nav-tabs-justified-link-border-color;
+  // }
+  // @media (min-width: @screen-sm-min) {
+  //   > li > a {
+  //     border-bottom: 1px solid @nav-tabs-justified-link-border-color;
+  //     border-radius: @border-radius-base @border-radius-base 0 0;
+  //   }
+  //    > .active > a:focus,
+  //    > .active > a:hover,
+  //   > .active > a {
+  //     border-bottom-color: @nav-tabs-justified-active-link-border-color;
+  //   }
+  // }
 }
 // Tabbable tabs
 // -------------------------
 // Hide tabbable panes to start, show them when `.active`
+
 .tab-content {
   > .tab-pane {
     display: none;
   }
+
   > .active {
     display: block;
   }
@@ -229,6 +263,7 @@
 // Dropdowns
 // -------------------------
 // Specific dropdowns
+
 .nav-tabs .dropdown-menu {
   // make dropdown border overlap tab border
   margin-top: -1px;
