--- a/less/type.less
+++ b/less/type.less
@@ -103,14 +103,14 @@ p {
   margin: 10px 0;
 }
 
-.lead {
-  margin-bottom: @line-height-computed;
-  font-size: floor((@font-size-base * 1.167));
-  line-height: 1.4;
-  @media (min-width: @screen-sm-min) {
-    font-size: (@font-size-base * 1.5);
-  }
-}
+// .lead {
+//   margin-bottom: @line-height-computed;
+//   font-size: floor((@font-size-base * 1.167));
+//   line-height: 1.4;
+//   @media (min-width: @screen-sm-min) {
+//     font-size: (@font-size-base * 1.5);
+//   }
+// }
 // Emphasis & misc
 // -------------------------
 // Ex: (12px small font / 14px base font) * 100% = about 85%
