--- a/less/variables.less
+++ b/less/variables.less
@@ -13,6 +13,7 @@
 @gray:                   #ccc;
 @gray-light:             #777;
 @gray-666:               #666;
+@gray-888:               #888;
 @grey-999:               #999;
 @grey-ddd:               #ddd;
 @gray-lighter:           #eee;
@@ -226,7 +227,7 @@
 @btn-danger-bg:                  @brand-danger;
 @btn-danger-border:              darken(@btn-danger-bg, 5%);
 
-@btn-link-disabled-color:        @gray-light;
+@btn-link-disabled-color:        @gray-888;
 
 // Allows for customizing button radius independently from global border radius
 @btn-border-radius-base:         @border-radius-base;
@@ -486,17 +487,18 @@
 //=== Shared nav styles
 @nav-link-padding:                          10px 10px;
 @nav-link-hover-bg:                         @gray-lighter;
+@nav-link-border-radius:                   @border-radius-base;
 
-@nav-disabled-link-color:                   @gray-light;
+@nav-disabled-link-color:                   @gray-888;
 @nav-disabled-link-hover-color:             @gray-light;
 
 //== Tabs
 @nav-tabs-border-color:                     @grey-ddd;
-
+@nav-tabs-bg-color:                         #f3f3f3;
 @nav-tabs-link-hover-border-color:          @gray-lighter;
 
-@nav-tabs-active-link-hover-bg:             @body-bg;
-@nav-tabs-active-link-hover-color:          @gray-light;
+@nav-tabs-active-link-hover-bg:             @grey-999;
+@nav-tabs-active-link-hover-color:          @white-color;
 @nav-tabs-active-link-hover-border-color:   @grey-ddd;
 
 @nav-tabs-justified-link-border-color:            #ddd;
@@ -504,8 +506,11 @@
 
 //== Pills
 @nav-pills-border-radius:                   @border-radius-base;
-@nav-pills-active-link-hover-bg:            @component-active-bg;
+@nav-pills-bg-color:                        #f3f3f3;
+@nav-pills-active-link-hover-bg:            @grey-999;
 @nav-pills-active-link-hover-color:         @component-active-color;
+
+@ku-nav-tabs-and-pills-hover-bg-color:      #e7e7e7;
 
 //== KU branding box and logo height
 //
