--- a/less/navs.less
+++ b/less/navs.less
@@ -33,7 +33,7 @@
       &:hover {
         color: @nav-disabled-link-hover-color;
         text-decoration: none;
-        //background-color: transparent;
+        background-color: @nav-tabs-bg-color;
         cursor: @cursor-disabled;
       }
     }
