--- a/less/variables.less
+++ b/less/variables.less
@@ -866,7 +866,7 @@
 @badge-bg:                    @gray-light;
 
 //** Badge text color in active nav link
-@badge-active-color:          @link-color;
+@badge-active-color:          @text-color;
 //** Badge background color in active nav link
 @badge-active-bg:             #fff;
 
