--- a/less/pager.less
+++ b/less/pager.less
@@ -13,6 +13,7 @@
     display: inline;
     > a,
     > span {
+      color: @btn-default-color;
       display: inline-block;
       padding: 5px 14px;
       background-color: @pager-bg;
