--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -69,3 +69,4 @@
 @import "ku-datetimepicker.less";
 @import "ku-misc.less";
 @import "ku-privacypolicy.less";
+@import "ku-gridboxes-bootstrap.less"; // Extra gridbox styling for Bootstrap templates
