--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -1,5 +1,41 @@
 @import "variables.less";
-@import "mixins.less";
-
-// Extra gridbox styling for Bootstrap templates (prefixed with class "ku-bs").
+@import "mixins.less"; // Extra gridbox styling for Bootstrap templates (prefixed with class "ku-bs").
 // Extends ku-gridboxes.less which was build for old Obvius page templates.
+@media only screen and (min-width: 681px) and (max-width: @screen-sm-min) {
+  // Front page / no menu
+  // 2-1-1 columns and 1-1-2 columns
+  .one-one-two-column .column1,
+  .one-one-two-column .column2,
+  .two-one-one-column .column2,
+  .two-one-one-column .column3 {
+    &.size2,
+    &.size3 {
+      &.with-img {
+        flex-direction: row;
+
+        .box1 {
+          flex: 1;
+          order: 2;
+
+          .header {
+            padding: 8px 5px 6px 10px;
+          }
+
+          .text {
+            display: block;
+          }
+        }
+
+        .box2 {
+          flex: 0 1 235px;
+          order: 1;
+
+          img {
+            max-width: none!important;
+            max-height: 108%!important;
+          }
+        }
+      }
+    }
+  }
+}
