--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -8,8 +8,8 @@
   .one-one-two-column .column2,
   .two-one-one-column .column2,
   .two-one-one-column .column3 {
-    &.size2,
-    &.size3 {
+    .size2,
+    .size3 {
       &.with-img {
         flex-direction: row;
 
