--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -15,10 +15,12 @@
 
         .box1 {
           flex: 1;
-          order: 2;
 
           .header {
-            padding: 8px 5px 6px 10px;
+            background: 0 0!important;
+            position: relative;
+            bottom: auto;
+            left: auto;
           }
 
           .text {
@@ -28,7 +30,6 @@
 
         .box2 {
           flex: 0 1 235px;
-          order: 1;
 
           img {
             max-width: none!important;
