--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -2537,6 +2537,10 @@
   }
 }
 // full width and 2/3 columns
+.one-one-two-column .column1,
+.one-one-two-column .column2,
+.two-one-one-column .column2,
+.two-one-one-column .column3,
 .three-one-column .column1,
 .one-three-column .column2,
 .one-one-two-column .column3,
