--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -3210,6 +3210,19 @@
       }
     }
   }
+  // Full width front page
+  .one-one-two-column .column1,
+  .one-one-two-column .column2,
+  .two-one-one-column .column2,
+  .two-one-one-column .column3 {
+    .size2, .size3 {
+      flex-direction: column;
+      .text {
+        display: none;
+      }
+    }
+  }
+
   // Display text for full width .size1 boxes
   .single-column .column1 {
     .size1 {
